Revision history for MooseX-Types-Structured

0.24   16 November 2010
        - Added some performance enhancing caching code (phaeton)

0.23   01 july 2010
        - Changes to the return value of ->validate that hopefully is both
          backwardly compatible as well as more detailed.  Now if you have
          a deeply recursive of repeated type constraints inside other
          type constraints you will get a drill down report to show the
          actual type constraint that failed

0.22   01 June 2010
        - Added tests to demonstrate type constraint equality problem
          introduced in Moose 1.05

0.21   26 March 2010
        - Removed unneed module from test
        - additional contributed documentation fixes

0.20   04 February 2010
        - Add a new Map type. (Ricardo SIGNES)
        - Properly handle Optional[] types within Tuples and Dicts.
          (Florian Ragwitz)

0.19   06 November 2009
        - Require Devel::PartialDump 0.10 and change tests to expect the
          correct format of error.

0.18   17 August 2009
        - Changed the Makefile.PL to reduce dependencies not needed by users
          that are not authors.  Bumped the revision and released to clear an
          error with cpan permissions.

0.17   12 August 2009
        - No new functionality.
        - Changed the way we specify dependencies in the Makefile.PL to reduce
          the depth of the dependency chain in cases where we don't need to be
          running the author quality tests.
        - Some documentation tweaks.

0.16    28 May 2009
        - Fix failing tests and test warnings on MooseX::Types 0.11.

0.15    27 May 2009
        - Change copy on license and added contributors section

0.14    01 May 2009
        - Use a builder instead of wrapping new to set the default structured
          coercion (rafl).
        - Make overflow (slurpy) type constraints introspectable and the name
          of constraints using them reasonable (rafl).
