@@ -21,5 +21,5 @@ Sub::Exporter = 0.982
 
 [Prereqs / BuildRequires]
 Test::More = 0.94
-Test::Exception = 0.27
+Test::Fatal = 0.003
 
