@@ -2,7 +2,6 @@ BEGIN {
     use strict;
     use warnings;
     use Test::More tests=>16;
-    use Test::Exception;
 }
 
 {
